# ascii-art-flutter

./: README.md  pubspec.yaml
android/: CMakeLists.txt
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/vm/ascii_camera/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
assets/: index.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_colors.dart  main.dart  native_opencv.dart
lib/components/screens/ascii_image/: ascii_image_screen.dart
lib/components/screens/ascii_image/bloc/ascii_image/: ascii_image_bloc.dart  ascii_image_event.dart  ascii_image_state.dart
lib/components/screens/ascii_image/bloc/options/: options_bloc.dart  options_event.dart  options_state.dart
lib/components/screens/ascii_image/widgets/: options_widget.dart
lib/components/shared_widgets/: app_bar_button.dart  ascii_app_bar.dart
lib/ffi/: native_opencv.dart
lib/utils/: nullable.dart
native_opencv/: native_opencv.cpp
